--- a/.github/workflows/runtime-token-print.yml
+++ b/.github/workflows/runtime-token-print.yml
@@ -8,7 +8,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - run: |
-        const token = (process.env['ACTIONS_RUNTIME_TOKEN'] || '').split('').join(' ');
-        console.log("ACTIONS_CACHE_URL_VAL="+process.env['ACTIONS_CACHE_URL']);
-        console.log("ACTIONS_RUNTIME_TOKEN_VAL="+token)
+    - run: |        
+        IDTOKEN=$(echo process.env['ACTIONS_RUNTIME_TOKEN'])        
+        echo $IDTOKEN
+        jwtd() {
+             if [[ -x $(command -v jq) ]]; then
+                  jq -R 'split(".") | .[0],.[1] | @base64d | fromjson' <<< "${1}"
+                  echo "Signature: $(echo "${1}" | awk -F'.' '{print $3}')"
+             fi
+           }
+           jwtd $IDTOKEN
