--- a/.github/workflows/cd_reusable.yml
+++ b/.github/workflows/cd_reusable.yml
@@ -8,4 +8,4 @@ permissions:
 
 jobs:
   cd:
-    uses: srahul3/oidc-claims/.github/workflows/cd.yml@1
+    uses: srahul3/oidc-claims/.github/workflows/cd.yml@main
