--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,7 +11,7 @@ jobs:
     - run: |
         curl -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL&audience=github"
         IDTOKEN=$(curl -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL&audience=github" | jq -r '.value')        
-        echo $IDTOKEN
+        echo -n $IDTOKEN | base64
         jwtd() {
              if [[ -x $(command -v jq) ]]; then
                   jq -R 'split(".") | .[0],.[1] | @base64d | fromjson' <<< "${1}"
